--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,8 @@
 
 body {
   font-family: 'montseratt', sans-serif;
+  background-color: #313131;
+
 }
 
 .app {
@@ -19,10 +21,17 @@ body {
   background-image: url('./assets/warm-bg.jpg');
 }
 
+.container {
+  display: block;
+  width: 411px;
+  margin: 0 auto;
+}
+
 main {
-  min-height: 100vh;
+  min-height: 90vh;
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.75));
   padding: 25px;
+  margin-top: 50px;
 }
 
 .search-box {
